--- a/Tasandid.html
+++ b/Tasandid.html
@@ -22,11 +22,13 @@
       crossorigin="anonymous"
       onload="renderMathInElement(document.body);"
     ></script>
-    <title>Tasandid</title>
+    <title>MafHelp/Tasandid</title>
   </head>
   <body>
     <div class="navbar">
-      <h1>MafHelp</h1>
+      <h1>
+        <a href="Index.html"> MafHelp </a>
+      </h1>
       <div class="navDB">
         <div class="navB">
           <button class="navTeema">Vektorid & tasandid</button>
@@ -59,21 +61,31 @@
         <div class="navB">
           <button class="navTeema">Funktsioonid</button>
           <div>
-            <button class="navAlaTeema">Funktsioonid</button>
-            <button class="navAlaTeema">Piirväärtus & pidevus</button>
-            <button class="navAlaTeema">Tuletis & Diferentsiaal</button>
-            <button class="navAlaTeema">Funktsiooni uurimine</button>
+            <button
+              class="navAlaTeema"
+              class="navAlaTeema"
+              onclick="window.location.href='Funktsioonid.html'"
+            >
+              Funktsioonid
+            </button>
+            <button
+              class="navAlaTeema"
+              class="navAlaTeema"
+              onclick="window.location.href='Piirv22rtus.html'"
+            >
+              Piirväärtus & pidevus
+            </button>
           </div>
         </div>
         <div class="navB">
           <button class="navTeema">Integraal</button>
           <div>
-            <button class="navAlaTeema">Algfunktsioon</button>
-            <button class="navAlaTeema">Diferentsiaal-võrrandid</button>
-            <button class="navAlaTeema">Pindala</button>
-            <button class="navAlaTeema">Määratud integraal</button>
-            <button class="navAlaTeema">Rakendused</button>
-            <button class="navAlaTeema">Päratud integraalid</button>
+            <button
+              class="navAlaTeema"
+              onclick="window.location.href='Integraal1.html'"
+            >
+              Algfunktsioon ja määramata integraal
+            </button>
           </div>
         </div>
         <div class="navB">
