--- a/Index.html
+++ b/Index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>MafHelp</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <!--Lisada mediaquery, selleks, kui ekraan liiga väikesks läheb 1000x500-->
     <div class="navbar">
-      <h1>MafHelp</h1>
+      <h1>
+        <a href="Index.html"> MafHelp </a>
+      </h1>
       <div class="navDB">
         <div class="navB">
           <button class="navTeema">Vektorid & tasandid</button>
@@ -44,21 +45,31 @@
         <div class="navB">
           <button class="navTeema">Funktsioonid</button>
           <div>
-            <button class="navAlaTeema">Funktsioonid</button>
-            <button class="navAlaTeema">Piirväärtus & pidevus</button>
-            <button class="navAlaTeema">Tuletis & Diferentsiaal</button>
-            <button class="navAlaTeema">Funktsiooni uurimine</button>
+            <button
+              class="navAlaTeema"
+              class="navAlaTeema"
+              onclick="window.location.href='Funktsioonid.html'"
+            >
+              Funktsioonid
+            </button>
+            <button
+              class="navAlaTeema"
+              class="navAlaTeema"
+              onclick="window.location.href='Piirv22rtus.html'"
+            >
+              Piirväärtus & pidevus
+            </button>
           </div>
         </div>
         <div class="navB">
           <button class="navTeema">Integraal</button>
           <div>
-            <button class="navAlaTeema">Algfunktsioon</button>
-            <button class="navAlaTeema">Diferentsiaal-võrrandid</button>
-            <button class="navAlaTeema">Pindala</button>
-            <button class="navAlaTeema">Määratud integraal</button>
-            <button class="navAlaTeema">Rakendused</button>
-            <button class="navAlaTeema">Päratud integraalid</button>
+            <button
+              class="navAlaTeema"
+              onclick="window.location.href='Integraal1.html'"
+            >
+              Algfunktsioon ja määramata integraal
+            </button>
           </div>
         </div>
         <div class="navB">
