--- a/Vektorid.html
+++ b/Vektorid.html
@@ -22,11 +22,13 @@
       crossorigin="anonymous"
       onload="renderMathInElement(document.body);"
     ></script>
-    <title>Vektorid</title>
+    <title>MafHelp/Vektorid</title>
   </head>
   <body>
     <div class="navbar">
-      <h1>MafHelp</h1>
+      <h1>
+        <a href="Index.html"> MafHelp </a>
+      </h1>
       <div class="navDB">
         <div class="navB">
           <button class="navTeema">Vektorid & tasandid</button>
@@ -59,21 +61,31 @@
         <div class="navB">
           <button class="navTeema">Funktsioonid</button>
           <div>
-            <button class="navAlaTeema">Funktsioonid</button>
-            <button class="navAlaTeema">Piirväärtus & pidevus</button>
-            <button class="navAlaTeema">Tuletis & Diferentsiaal</button>
-            <button class="navAlaTeema">Funktsiooni uurimine</button>
+            <button
+              class="navAlaTeema"
+              class="navAlaTeema"
+              onclick="window.location.href='Funktsioonid.html'"
+            >
+              Funktsioonid
+            </button>
+            <button
+              class="navAlaTeema"
+              class="navAlaTeema"
+              onclick="window.location.href='Piirv22rtus.html'"
+            >
+              Piirväärtus & pidevus
+            </button>
           </div>
         </div>
         <div class="navB">
           <button class="navTeema">Integraal</button>
           <div>
-            <button class="navAlaTeema">Algfunktsioon</button>
-            <button class="navAlaTeema">Diferentsiaal-võrrandid</button>
-            <button class="navAlaTeema">Pindala</button>
-            <button class="navAlaTeema">Määratud integraal</button>
-            <button class="navAlaTeema">Rakendused</button>
-            <button class="navAlaTeema">Päratud integraalid</button>
+            <button
+              class="navAlaTeema"
+              onclick="window.location.href='Integraal1.html'"
+            >
+              Algfunktsioon ja määramata integraal
+            </button>
           </div>
         </div>
         <div class="navB">
@@ -91,69 +103,45 @@
     </div>
     <div class="sisuNupud">
       <button type="button" class="btn" id="1" onclick="reply_click(this.id)">
-        Suunatud lõik
-      </button>
-      <button type="button" class="btn" id="2" onclick="reply_click(this.id)">
         Seotud vektor
       </button>
       <button type="button" class="btn" id="3" onclick="reply_click(this.id)">
-        Seotud vektori pikkus
-      </button>
-      <button type="button" class="btn" id="4" onclick="reply_click(this.id)">
-        Kollineaarsed seotud vektorid
-      </button>
-      <button type="button" class="btn" id="5" onclick="reply_click(this.id)">
-        vastassuunalised seotud vektorid
-      </button>
-      <button type="button" class="btn" id="6" onclick="reply_click(this.id)">
-        Ekvivalentne soetud vektor
-      </button>
-      <button type="button" class="btn" id="7" onclick="reply_click(this.id)">
-        Ekvivalentselt seotud vektorite hulk
-      </button>
-      <button type="button" class="btn" id="8" onclick="reply_click(this.id)">
         Vabavektorid
       </button>
-      <button type="button" class="btn" id="9" onclick="reply_click(this.id)">
-        Vastandvektor
-      </button>
-      <button type="button" class="btn" id="10" onclick="reply_click(this.id)">
-        Kollineaarsed vabvektorid
-      </button>
-      <button type="button" class="btn" id="11" onclick="reply_click(this.id)">
-        Samasuunalised vabavektorid
-      </button>
-      <button type="button" class="btn" id="12" onclick="reply_click(this.id)">
+      <button type="button" class="btn" id="4" onclick="reply_click(this.id)">
         Punkti projektsioon
       </button>
-      <button type="button" class="btn" id="13" onclick="reply_click(this.id)">
+      <button type="button" class="btn" id="5" onclick="reply_click(this.id)">
         Projektsiooni vektor
       </button>
-      <button type="button" class="btn" id="14" onclick="reply_click(this.id)">
+      <button type="button" class="btn" id="6" onclick="reply_click(this.id)">
         Kohavekktor
       </button>
-      <button type="button" class="btn" id="15" onclick="reply_click(this.id)">
+      <button type="button" class="btn" id="7" onclick="reply_click(this.id)">
         Eukleidiline vektorruum
       </button>
-      <button type="button" class="btn" id="16" onclick="reply_click(this.id)">
+      <button type="button" class="btn" id="8" onclick="reply_click(this.id)">
         Vektorruumi loomuk baas
       </button>
-      <button type="button" class="btn" id="17" onclick="reply_click(this.id)">
+      <button type="button" class="btn" id="9" onclick="reply_click(this.id)">
         Vektori pikkus
       </button>
-      <button type="button" class="btn" id="18" onclick="reply_click(this.id)">
+      <button type="button" class="btn" id="10" onclick="reply_click(this.id)">
         Vektorite vaheline nurk
       </button>
-      <button type="button" class="btn" id="19" onclick="reply_click(this.id)">
+      <button type="button" class="btn" id="11" onclick="reply_click(this.id)">
         Skalaarkorrutis
       </button>
-      <button type="button" class="btn" id="20" onclick="reply_click(this.id)">
-        Sega korrutis
+      <button type="button" class="btn" id="12" onclick="reply_click(this.id)">
+        Vektorkorrutis
       </button>
-      <button type="button" class="btn" id="22" onclick="reply_click(this.id)">
+      <button type="button" class="btn" id="13" onclick="reply_click(this.id)">
+        Segakorrutis
+      </button>
+      <button type="button" class="btn" id="14" onclick="reply_click(this.id)">
         Tetraeedri ruumala
       </button>
-      <button type="button" class="btn" id="21" onclick="reply_click(this.id)">
+      <button type="button" class="btn" id="15" onclick="reply_click(this.id)">
         Rööptahuka ruumala
       </button>
     </div>
@@ -163,25 +151,40 @@
         \(\bold{suunatud}\) \(\bold{lõiguks}\) ehk \(\bold{seotud}\)
         \(\bold{vektoriks}\). Seotud vektorit alguspunktiga X ja lõpp-punktiga Y
         tähistatakse edaspidi \(\overline{XY}\).
-      </div>
-      <div class="tekst" id="3">
-        Seotud vektori \(\overline{XY}\) pikkuseks \(\overline{|XY|}\)
-        nimetatakse teda määrava lõigu XY pikkust.
-      </div>
-      <div class="tekst" id="2">
+        <br />
+        <br />
+        Seotud vektorit \(\overline{AB}\) nimetatakse
+        \(\bold{ekvivalentseteks}\) seotud vektoriga \(\overline{AB}\), kui
+        |\(\overline{AB}\)| = |\(\overline{AB}\)| ja \(\overline{AB}\) ↑↑
+        \(\overline{CD}\). Seda tähistatakse \(\overline{AB}\) ∼
+        \(\overline{CD}\).
+        <br />
+        <br />
+        Seotud vektoriga \(\overline{AB}\) ekvivalentsete seotud vektorite hulka
+        {\(\overline{XY}\) | \(\overline{XY}\) ∼ \(\overline{XY}\)} nimetatakse
+        \(\bold{ekvivalentsiklassiks}\) \(\bold{moodustajaga}\)
+        \(\overline{AB}\). Viimast tähistatakse \(\bold{AB}\). Seega
+        \(\bold{AB}\) = {\(\overline{XY}\) | \(\overline{XY}\) ∼
+        \(\overline{AB}\)}.
+        <br />
+        <br />
         Seotud vektorit \(\overline{YX}\) nimetatakse seotud vektori
         \(\overline{XY}\) \(\bold{vastandvektoriks}\), mida tähistame
         −\(\overline{XY}\) , s.o −\(\overline{XY}\) = \(\overline{YX}\).
-      </div>
-      <div class="tekst" id="4">
+        <br />
+        <br />
+        Seotud vektori \(\overline{XY}\) pikkuseks \(\overline{|XY|}\)
+        nimetatakse teda määrava lõigu XY pikkust.
+        <br />
+        <br />
         Seotud vektorit \(\overline{AB}\) nimetatakse
         \(\bold{kollineaarseteks}\) seotud vektoriga \(\overline{CD}\), kui lõik
         \(\overline{AB}\) on paralleelne lõiguga CD (või lõigud AB ja CD asuvad
         ühel ja samal sirgel, sealhulgas ühtivad). Öeldut tähistatakse
         \(\overline{AB}\) ∥ \(\overline{CD}\) ning kui vektorid ei ole
         kollineaarsed, siis \(\overline{AB}\) ∦ \(\overline{CD}\).
-      </div>
-      <div class="tekst" id="5">
+        <br />
+        <br />
         Seotud vektorit \(\overline{AB}\) nimetatakse \(\bold{samasuunaliseks}\)
         (vastassuunaliseks) seotud vektoriga \(\overline{CD}\), kui
         \(\overline{AB}\) ∥ \(\overline{CD}\) ja suunad on ühesugused (suunad on
@@ -189,40 +192,26 @@
         \(\overline{CD}\) ja vastassuunalisust \(\overline{AB}\) ↑↓
         \(\overline{CD}\)
       </div>
-      <div class="tekst" id="6">
-        Seotud vektorit \(\overline{AB}\) nimetatakse \(\bold{ekvivaltseks}\)
-        seotud vektoriga \(\overline{AB}\), kui |\(\overline{AB}\)| =
-        |\(\overline{AB}\)| ja \(\overline{AB}\) ↑↑ \(\overline{CD}\). Seda
-        tähistatakse \(\overline{AB}\) ∼ \(\overline{CD}\).
-      </div>
-      <div class="tekst" id="7">
-        Seotud vektoriga \(\overline{AB}\) ekvivalentsete seotud vektorite hulka
-        {\(\overline{XY}\) | \(\overline{XY}\) ∼ \(\overline{XY}\)} nimetatakse
-        \(\bold{ekvivalentsiklassiks}\) \(\bold{moodustajaga}\)
-        \(\overline{AB}\). Viimast tähistatakse \(\bold{AB}\). Seega
-        \(\bold{AB}\) = {\(\overline{XY}\) | \(\overline{XY}\) ∼
-        \(\overline{AB}\)}.
-      </div>
-      <div class="tekst" id="8">
+      <div class="tekst" id="3">
         Tähistame E1 = {\(\bold{XY}\) | \(\overline{XY}\) ∈ \(\overline{E1}\)},
         E2 = {\(\bold{XY}\) | \(\overline{XY}\) ∈ \(\overline{E2}\)} ja E3 =
         {\(\bold{XY}\) | \(\overline{XY}\) ∈ \(\overline{E3}\)} vastavalt kõiki
         sirge E1, tasandi E2 ja ruumi E3 poolt moodustatud ekvivalentsiklasse ja
         nimetatame nende elemente \(\bold{vabavektoriteks}\). Ühine tähis
         vabavektorite vektorruumi jaoks olgu E.
-      </div>
-      <div class="tekst" id="9">
+        <br />
+        <br />
         Vabavektori \(\bold{x}\)= \(\bold{AB}\) ∈ E \(\bold{vastaandvektoriks}\)
         nimetatakse vabavektorit −\(\bold{x}\) = \(\bold{BA}\) ∈ E.
-      </div>
-      <div class="tekst" id="10">
+        <br />
+        <br />
         Vabavektoreid \(\bold{x}\), \(\bold{y}\) ∈ E nimetatakse
         \(\bold{kollineaarseteks}\) , kui nende vektorite moodustajad on
         kollineaarsed ehk \(\overline{AB}\) ∥ \(\overline{A′B′}\) , kui
         \(\overline{AB}\) ∈ \(\bold{x}\) ja \(\overline{A′B′}\) ∈ \(\bold{y}\),
         ning seda tähistatakse \(\bold{x}\) ∥ \(\bold{y}\).
-      </div>
-      <div class="tekst" id="11">
+        <br />
+        <br />
         Vabavektoreid \(\bold{x}\), \(\bold{y}\) ∈ E nimetatakse
         \(\bold{samasuunalisteks}\) (vastassuunalisteks), kui nende vektorite
         moodustajad on samasuunalised (vastassuunalised) ehk \(\overline{AB}\)
@@ -230,14 +219,14 @@
         tähistatakse \(\bold{x}\) ↑↑ \(\bold{y}\) (\(\bold{x}\) ↑↓
         \(\bold{y}\)).
       </div>
-      <div class="tekst" id="12">
+      <div class="tekst" id="4">
         Punkti X′ nimetatakse punkti X \(\bold{projektsiooniks}\)
         \(\bold{sirgele}\) s \(\bold{paralleelselt}\) \(\bold{sirgega}\) l.
         <br />
         <br /><br /><br />
         <img src="Capture.PNG" alt="I" />
       </div>
-      <div class="tekst" id="13">
+      <div class="tekst" id="5">
         Vektorit \(\bold{X′Y′}\) nimetatakse vektori x
         \(\bold{projektsioonivektoriks}\) vektori a sihile paralleelselt sirgega
         l (tasandiga π). Vektorit \(\bold{X′Y′}\) tähistatakse
@@ -245,11 +234,11 @@
         <br /><br /><br />
         <img src="Capture2.PNG" alt="I" />
       </div>
-      <div class="tekst" id="14">
+      <div class="tekst" id="6">
         Mistahes punkti X ∈ E \(\bold{kohavektoriks}\) nimetatakse vektorit
         \(\bold{OX}\) ∈ E.
       </div>
-      <div class="tekst" id="15">
+      <div class="tekst" id="7">
         Fikseeritud n ∈ N korral nimetatakse hulka <br />
         \(\R^n\) = {(x\(\tiny{1}\), . . . , x\(\tiny{n}\)| x\(\tiny{1}\), . . .
         , x\(\tiny{n}\) ∈ \(\R^n\)} <br />
@@ -261,7 +250,7 @@
         α\(\bold{x}\) = (αx\(\tiny{1}\), . . . , αx\(\tiny{n}\)), \(\bold{x}\)∈
         \(\R^n\), α ∈ \(\R\).
       </div>
-      <div class="tekst" id="16">
+      <div class="tekst" id="8">
         Vektorite süsteemi e\(\tiny{1}\), . . . , e\(\tiny{n}\) ∈ \(\R^n\), kus
         <br />
         e\(\tiny{1}\) = (1, 0, 0, . . . , 0),<br />
@@ -273,11 +262,11 @@
         nimetatakse vektorruumi \(\R^n\) \(\bold{loomulikuks}\)
         \(\bold{baasiks}\).
       </div>
-      <div class="tekst" id="17">
+      <div class="tekst" id="9">
         Vektori \(\bold{x}\) ∈ \(\R^n\) pikkus |\(\bold{x}\)| defineeritakse
         võrdusega |\(\bold{x}\)| = \(\sqrt{x^2_1 + ... + x^2_n}\)
       </div>
-      <div class="tekst" id="18">
+      <div class="tekst" id="10">
         Olgu antud nullvektorist erinevad vektorid x, y ∈ E. Võtame vektori x
         kui vabavektori ühe esindaja \(\overline{AB}\), samuti vabavektori y
         esindaja \(\overline{AC}\). Vektorite x ja y \(\bold{vaheliseks}\)
@@ -285,29 +274,29 @@
         lühemat teed pidi lõiguga AC samasse suunda. Seda nurka tähistame ∠(x,
         y), siis ∠(x, y) ∈ [0, π]
       </div>
-      <div class="tekst" id="18">
+      <div class="tekst" id="11">
         Vektorite a, b ∈ E \(\bold{skalaarkorrutiseks}\) nimetatakse reaalarvu,
         mis võrdub nende vektorite pikkuste ja nendevahelise nurga koosinuse
         korrutisega, s.t ⟨a, b⟩ = |a||b| cos ∠(a, b).
       </div>
-      <div class="tekst" id="19">
+      <div class="tekst" id="12">
         Vektorite a, b ∈ E3 \(\bold{vektorkorrutiseks}\) nimetatakse vektorit a
         × b,mis rahuldab järgmist kolme tingimust: <br />
         1. |a × b| = |a||b|sin ∠(a, b),<br />
         2. a × b ⊥ a ja a × b ⊥ b, s.t a ja b on risti vektoriga a × b, <br />
         3. {a, b, a × b} on parema käe kolmik <br />
       </div>
-      <div class="tekst" id="20">
+      <div class="tekst" id="13">
         Vektorite a, b, c ∈ E3 \(\bold{segakorrutiseks}\) nimetatakse arvu
         <br />
         abc = ⟨a × b, c⟩.
       </div>
-      <div class="tekst" id="21">
+      <div class="tekst" id="14">
         Kolme vektori segakorrutise absoluutväärtus võrdub neile vektoritele
         ehitatud rööptahuka ruumalaga, <br />
         V\(\tiny{rt}\) = |abc|.
       </div>
-      <div class="tekst" id="22">
+      <div class="tekst" id="15">
         Kolmele vektorile ehitatud tetraeedri ruumala on <br />
         V\(\tiny{te}\)=\(\frac{1}{6}\)|abc|
       </div>
